fjerent en marianne

--- a/style.css
+++ b/style.css
@@ -74,9 +74,5 @@ video {
 }
 
 .grid_1234 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 2fr 3fr;
-
-  padding: 10rem;
+  display: flex;
 }
